--- a/test/fixtures/dailies.yml
+++ b/test/fixtures/dailies.yml
@@ -1,13 +1,13 @@
 # == Schema Information
 #
-# Table name: habits
+# Table name: dailies
 #
 #  id         :integer          not null, primary key
-#  title      :string           not null
+#  title      :text             not null
+#  rank       :integer
 #  user_id    :integer          not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
-#  rank       :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
