--- a/test/fixtures/todos.yml
+++ b/test/fixtures/todos.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: todos
+#
+#  id         :integer          not null, primary key
+#  title      :text             not null
+#  user_id    :integer          not null
+#  rank       :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
