add colors to tasks to match strength

--- a/test/fixtures/dailies.yml
+++ b/test/fixtures/dailies.yml
@@ -2,12 +2,15 @@
 #
 # Table name: dailies
 #
-#  id         :integer          not null, primary key
-#  title      :text             not null
-#  rank       :integer
-#  user_id    :integer          not null
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id           :integer          not null, primary key
+#  title        :text             not null
+#  rank         :integer
+#  user_id      :integer          not null
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  last_checked :datetime
+#  description  :string
+#  strength     :integer          default("3")
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
