--- a/test/fixtures/task_clicks.yml
+++ b/test/fixtures/task_clicks.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: task_clicks
+#
+#  id             :integer          not null, primary key
+#  clickable_type :string           not null
+#  clickable_id   :integer          not null
+#  sign           :integer          default("1")
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
