--- a/test/fixtures/rewards.yml
+++ b/test/fixtures/rewards.yml
@@ -9,6 +9,7 @@
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
 #  description :string
+#  cost        :integer          default("10")
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
